EDU-1093 Allow room owners to see member emails

--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -89,11 +89,18 @@
   position: relative;
 }
 
-.RoomPage-memberDetail {
-  height: 30px;
+.RoomPage-memberDetails {
+  height: 40px;
   display: flex;
+  margin: 0 auto;
+  width: fit-content;
   flex-direction: column;
+  justify-content: center;
   font-size: @edu-font-size-sm;
+}
+
+.RoomPage-memberDetail {
+  align-self: flex-end;
 }
 
 .RoomPage-memberDeleteButton {
