--- a/src/components/user-card.less
+++ b/src/components/user-card.less
@@ -3,7 +3,7 @@
   display: grid;
   text-align: center;
   align-items: center;
-  gap: @edu-content-padding;
+  gap: 10px;
   padding: @edu-content-padding;
   grid-template-rows: 1fr auto 1fr;
   border-radius: @edu-border-radius-base;
@@ -15,7 +15,18 @@
   .m-overflow-ellipsis;
 }
 
-.UserCard-avatarWrapper {
+.UserCard-email {
+  .m-overflow-ellipsis;
+  font-size: @edu-font-size-sm;
+  color: @edu-text-color-secondary;
+}
+
+.UserCard-emailLink {
+  .m-link(inherit);
+  margin-left: 5px;
+}
+
+.UserCard-content {
   display: grid;
   gap: 5px;
   grid-auto-flow: row;
