--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -131,6 +131,7 @@
 @import '../plugins/audio/audio.less';
 @import '../plugins/video/video.less';
 @import '../plugins/image/image.less';
+@import '../plugins/piano/piano.less';
 @import '../plugins/iframe/iframe.less';
 @import '../plugins/catalog/catalog.less';
 @import '../plugins/pdf-viewer/pdf-viewer.less';
