EDU-1096 Reword range selector to introduce timecodes fine tunning

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -117,6 +117,7 @@
 @import '../components/admin/user-account-locked-state-editor.less';
 @import '../components/media-player/media-player-progress-bar.less';
 @import '../components/resource-picker/wikimedia-files-viewer.less';
+@import '../components//media-player/timecode-fine-tunning-input.less';
 
 
 // Pure CSS components
