--- a/src/components/media-player/media-range-selector.less
+++ b/src/components/media-player/media-range-selector.less
@@ -5,47 +5,43 @@
   background-color: @edu-background-color-light;
 }
 
-.MediaRangeSelector-noMediaArea {
+.MediaRangeSelector-noMedia {
   min-height: 250px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.MediaRangeSelector-rangeSelectorArea {
-  padding: @edu-content-padding * 2 0 @edu-content-padding 0;
-}
-
-.MediaRangeSelector-rangeSelector {
-  display: grid;
-  gap: 15px;
-  align-items: baseline;
-  place-content: center;
-  grid-auto-flow: column;
-
-  @media @edu-media-phone-portrait {
-    grid-auto-flow: row;
-  }
-}
-
-.MediaRangeSelector-rangeSelectorButtons {
-  display: flex;
-  flex-wrap: wrap;
-  .m-fake-flex-gap(10px);
-}
-
-.MediaRangeSelector-rangeFineTunning {
-  margin-top: 20px;
-  display: grid;
-  grid-auto-flow: column;
-  gap: @edu-content-padding;
-  place-content: center;
-}
-
-.MediaRangeSelector-selectedTimecodesColumn {
+.MediaRangeSelector-selector {
+  margin-top: 30px;
+  margin-bottom: 15px;
   display: grid;
   grid-auto-flow: row;
+  place-content: center;
   gap: @edu-content-padding;
+}
+
+.MediaRangeSelector-selectorQuickSelect {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: baseline;
+  margin-bottom: 20px;
+  .m-fake-flex-gap(@edu-control-spacing-wide);
+}
+
+.MediaRangeSelector-selectorFineTunning {
+  display: grid;
+  grid-auto-flow: row;
+  place-content: center;
+  gap: @edu-content-padding;
+}
+
+.MediaRangeSelector-selectorFineTunningInput {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  .m-fake-flex-gap(@edu-control-spacing-wide);
 }
 
 .MediaRangeSelector-footer {
@@ -56,6 +52,6 @@
 
 .MediaRangeSelector-footerGroup {
   display: flex;
-  .m-fake-flex-gap(10px);
   padding-top: 10px;
+  .m-fake-flex-gap(@edu-control-spacing-wide);
 }
