EDU-1095 Support setting description for catalog item links

--- a/src/plugins/catalog/catalog.less
+++ b/src/plugins/catalog/catalog.less
@@ -40,3 +40,9 @@
   display: block;
   color: inherit;
 }
+
+.CatalogItemEditor-description {
+  .ant-input-textarea-show-count::after {
+    .u-input-count !important;
+  }
+}
