--- a/src/plugins/catalog/catalog.less
+++ b/src/plugins/catalog/catalog.less
@@ -10,6 +10,18 @@
   list-style: none;
 }
 
+.CatalogDisplay-linkListItem {
+  display: flex;
+  flex-direction: column;
+  margin: 5px 0;
+}
+
+.CatalogDisplay-itemLinkDescription {
+  text-align: left;
+  font-size: @edu-font-size-sm;
+  color: @edu-text-color-secondary;
+}
+
 .CatalogDisplay-imageTiles {
   margin: 0;
   padding: 0;
