EDU-1095 Flatten menu in item-panel to reduce one click

--- a/src/components/item-panel.less
+++ b/src/components/item-panel.less
@@ -1,3 +1,36 @@
 .ItemPanel {
   margin: 10px 0;
 }
+
+.ItemPanel-actionButtons {
+  display: grid;
+  gap: 3px;
+  grid-auto-flow: column;
+}
+
+.ItemPanel-actionButton {
+  line-height: 26px;
+  height: 26px !important;
+  width: 26px !important;
+  color: darken(@edu-text-color, 20%) !important;
+
+  &:disabled {
+    border-radius: @edu-border-radius-base !important;
+    color: @edu-disabled-color !important;
+  }
+
+  &:hover,
+  &:active,
+  &:focus {
+    background-color: @edu-white !important;
+  }
+
+  &.ItemPanel-actionButton--danger {
+
+    &:hover,
+    &:active,
+    &:focus {
+      color: @edu-error-color !important;
+    }
+  }
+}
