--- a/src/plugins/media-analysis/media-analysis.less
+++ b/src/plugins/media-analysis/media-analysis.less
@@ -102,3 +102,7 @@
 .MediaAnalysisEditor-trackMixerPreviewLabel {
   .m-plugin-media-preview-label;
 }
+
+.MediaAnalysisEditor-segmentsActionButton {
+  color: @edu-text-color;
+}
