EDU-1095 Support drag and drop catalog items

--- a/src/components/item-panel.less
+++ b/src/components/item-panel.less
@@ -1,5 +1,9 @@
 .ItemPanel {
   margin: 10px 0;
+
+  &.is-dragged {
+    border: 1px solid @edu-border-color-dark;
+  }
 }
 
 .ItemPanel-actionButtons {
