--- a/src/plugins/catalog/catalog.less
+++ b/src/plugins/catalog/catalog.less
@@ -53,6 +53,14 @@
   color: inherit;
 }
 
+.CatalogEditor-panelItem {
+  background-color: @edu-white;
+
+  &.is-other-dragged {
+    opacity: 0.60;
+  }
+}
+
 .CatalogItemEditor-description {
   .ant-input-textarea-show-count::after {
     .u-input-count !important;
