EDU-1114 Extract utility class for action buttons

--- a/src/styles/utilities.less
+++ b/src/styles/utilities.less
@@ -127,3 +127,32 @@
   grid-auto-flow: column;
   gap: 3px;
 }
+
+.u-action-button {
+  line-height: 26px;
+  height: 26px !important;
+  width: 26px !important;
+  color: darken(@edu-text-color, 20%) !important;
+
+  &:disabled {
+    border-radius: @edu-border-radius-base !important;
+    color: @edu-disabled-color !important;
+  }
+
+  &:hover,
+  &:active,
+  &:focus {
+    background-color: @edu-white !important;
+  }
+
+}
+
+.u-danger-action-button {
+  .u-action-button;
+
+  &:hover,
+  &:active,
+  &:focus {
+    color: @edu-error-color !important;
+  }
+}
