EDU-1095 Center description for catalog item

--- a/src/plugins/catalog/catalog.less
+++ b/src/plugins/catalog/catalog.less
@@ -17,7 +17,7 @@
 }
 
 .CatalogDisplay-itemLinkDescription {
-  text-align: left;
+  text-align: center;
   font-size: @edu-font-size-sm;
   color: @edu-text-color-secondary;
 }
