EDU-1095 Include title in catalog item panel header

--- a/src/components/item-panel.less
+++ b/src/components/item-panel.less
@@ -16,6 +16,10 @@
   }
 }
 
+.ItemPanel-header {
+  .m-line-clamp(1);
+}
+
 .ItemPanel-contentWrapper {
   background-color: @edu-white !important;
 }
