--- a/src/styles/elements.less
+++ b/src/styles/elements.less
@@ -41,6 +41,10 @@ h6 {
   font-weight: @edu-heading-font-weight;
 }
 
+input {
+  font-size: @edu-font-size-base;
+}
+
 a {
   color: inherit;
   cursor: pointer;
