--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -245,6 +245,34 @@
   box-shadow: 0 0 0 @edu-outline-width fade(@edu-error-color, @edu-outline-fade);
 }
 
+.m-dropzone-transition {
+  transition:
+    background-color @edu-animation-duration-slow,
+    border-color @edu-animation-duration-slow,
+    box-shadow @edu-animation-duration-slow;
+}
+
+.m-dropzone-base {
+  .m-dropzone-transition;
+  background-color: transparent;
+  border: 1px dashed transparent;
+  border-radius: @edu-border-radius-base;
+  outline: @edu-outline-blur-size;
+}
+
+.m-dropzone-hover {
+  .m-dropzone-transition;
+  background-color: @edu-background-color-light;
+  border-color: @edu-border-color-active;
+}
+
+.m-dropzone-active {
+  .m-dropzone-transition;
+  background-color: @edu-background-color-base;
+  border-color: @edu-border-color-active;
+  .m-border-glow-success;
+}
+
 .m-info-card {
   width: 100%;
   display: block;
