EDU-1115 Correct preview styling for timeline plugins

--- a/src/plugins/media-slideshow/media-slideshow.less
+++ b/src/plugins/media-slideshow/media-slideshow.less
@@ -10,7 +10,7 @@
 }
 
 .MediaSlideshowEditor-playerPreview {
-  .m-plugin-media-preview;
+  .m-plugin-media-preview !important;
   margin-top: 20px;
   border-top: 1px solid @edu-border-color-base;
 }
