--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -413,6 +413,7 @@
   margin-bottom: 40px;
   background-color: @edu-background-color-light;
   border-bottom: 1px solid @edu-border-color-base;
+  border-top: none;
 }
 
 .m-plugin-media-preview-label {
