EDU-1118 Fit 4 user/room cards per row

--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -266,12 +266,7 @@
 }
 
 .m-section-content {
-  padding: @edu-content-padding;
-
-  @media @edu-media-phone {
-    padding-left: 0;
-    padding-right: 0;
-  }
+  padding: @edu-content-padding 0;
 }
 
 .m-section-content-narrow {
@@ -290,8 +285,8 @@
 }
 
 .m-card {
-  width: 260px;
-  min-height: 260px;
+  width: 255px;
+  min-height: 255px;
 }
 
 .m-card-wrapper {
