EDU-1119 Change external link source input to url-input in catalog plugin

--- a/src/plugins/catalog/catalog.less
+++ b/src/plugins/catalog/catalog.less
@@ -21,7 +21,7 @@
   font-size: @edu-font-size-sm;
   color: @edu-text-color-secondary;
 
-  &.CatalogDisplay-itemLinkDescription--centered {
+  .CatalogDisplay-itemLinkDescription--centered {
     text-align: center;
   }
 }
