EDU-1113 Small fix acting as reason to patch and re-deploy :)

--- a/src/plugins/catalog/catalog.less
+++ b/src/plugins/catalog/catalog.less
@@ -17,9 +17,13 @@
 }
 
 .CatalogDisplay-itemLinkDescription {
-  text-align: center;
+  text-align: left;
   font-size: @edu-font-size-sm;
   color: @edu-text-color-secondary;
+
+  &.CatalogDisplay-itemLinkDescription--centered {
+    text-align: center;
+  }
 }
 
 .CatalogDisplay-imageTiles {
