EDU-1124 Fix matching-cards plugin tile for audio-only media

--- a/src/components/media-player/media-player.less
+++ b/src/components/media-player/media-player.less
@@ -57,4 +57,8 @@
   font-size: 100px;
   background-color: @edu-white;
   color: @edu-text-color-secondary;
+
+  @media @edu-media-phone {
+    font-size: 50px;
+  }
 }
