EDU-1090 Adjust media library screen for mobile devices

--- a/src/components/resource-selector/shared/action-invitation.less
+++ b/src/components/resource-selector/shared/action-invitation.less
@@ -11,11 +11,20 @@
   line-height: 100%;
   margin-bottom: 10px;
   color: @edu-text-color-secondary !important;
+
+  @media @edu-media-phone {
+    font-size: 26px;
+    margin-bottom: 5px;
+  }
 }
 
 .ActionInvitation-title {
   font-size: @edu-font-size-lg;
   font-weight: bold;
+
+  @media @edu-media-phone {
+    font-size: @edu-font-size-base;
+  }
 }
 
 .ActionInvitation-subtitle {
