EDU-1090 Make all file picker screens work on mobile and desktop

--- a/src/components/resource-selector/shared/utilities.less
+++ b/src/components/resource-selector/shared/utilities.less
@@ -22,6 +22,7 @@
 
 .u-resource-selector-screen-content-fit {
   height: fit-content;
+  padding-bottom: 8px;
 }
 
 .u-resource-selector-screen-content-scrollable {
