--- a/src/components/resource-selector/media-library/media-library-search-screen.less
+++ b/src/components/resource-selector/media-library/media-library-search-screen.less
@@ -1,21 +1,18 @@
 .MediaLibrarySearchScreen {
+  position: relative;
   height: 100%;
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: auto 1fr auto auto;
+  width: 100%;
 
   &.is-hidden {
     visibility: hidden;
   }
 }
 
-.MediaLibrarySearchScreen-noSearch {
+.MediaLibrarySearchScreen-searchContent {
   display: grid;
-  padding: 20px;
 }
 
 .MediaLibrarySearchScreen-filesViewer {
-  margin: 20px 0;
   border: 1px solid @edu-border-color-base;
   overflow: hidden;
   position: relative;
@@ -37,4 +34,8 @@
 .MediaLibrarySearchScreen-searchInfo {
   min-height: 40px;
   margin-bottom: 20px;
+}
+
+.MediaLibrarySearchScreen-noSearch {
+  display: grid;
 }
