EDU-1123 Reorganize preview screen

--- a/src/components/resource-selector/shared/resource-details.less
+++ b/src/components/resource-selector/shared/resource-details.less
@@ -1,46 +1,52 @@
-.ResourceDetails {
-  display: grid;
-  gap: 24px;
-  align-items: center;
-  justify-items: stretch;
-  grid-template-rows: 1fr;
-  grid-template-columns: 1fr 1fr;
-
-  @media @edu-media-phone {
-    display: flex;
-    flex-direction: column;
-    overflow-y: auto;
-  }
-}
+.ResourceDetails {}
 
 .ResourceDetails-previewArea {
-  grid-row: 1;
-  grid-column: 1;
+  display: grid;
+  margin: 0 auto;
+  width: fit-content;
+  grid-auto-flow: row;
+  align-items: center;
+  justify-content: center;
+  gap: @edu-control-spacing-wide;
   padding: @edu-content-padding;
-  height: 100%;
   border-radius: @edu-border-radius-base;
   border: 1px solid @edu-border-color-light;
   background-color: @edu-white;
+}
+
+.ResourceDetails-file {
   display: flex;
-  align-items: center;
+  grid-auto-flow: column;
   justify-content: center;
-  overflow: hidden;
+  gap: @edu-control-spacing-base;
+  margin-bottom: 10px;
 }
 
-.ResourceDetails-detailsArea {
-  grid-row: 1;
-  grid-column: 2;
+.ResourceDetails-fileName {
+  .m-overflow-ellipsis;
 }
 
-.ResourceDetails-detailLabel {
-  font-size: 90%;
-  font-weight: bold;
+.ResourceDetails-fileMetadata {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  font-size: @edu-font-size-sm;
+  color: @edu-text-color-secondary;
+  padding-top: 5px;
 }
 
-.ResourceDetails-detailValue {
-  margin-bottom: 18px;
+.ResourceDetails-link {
+  display: grid;
+  gap: @edu-control-spacing-wide;
+  align-items: baseline;
+  place-content: center;
+  grid-auto-flow: column;
+  font-size: @edu-font-size-xs;
+  color: @edu-text-color-secondary;
+  margin-top: 35px;
+}
 
-  &:last-child {
-    margin-bottom: unset;
-  }
+.ResourceDetails-linkIcon {
+  font-size: @edu-font-size-base;
+  color: darken(@edu-text-color, 10%);
 }
