--- a/src/components/resource-selector/shared/utilities.less
+++ b/src/components/resource-selector/shared/utilities.less
@@ -14,6 +14,10 @@
   }
 }
 
+.u-resource-selector-screen-headline {
+  margin-top: 0;
+}
+
 .u-resource-selector-screen-content {
   height: 100%;
   max-height: 100%;
