EDU-1123 Simplify screens styling and fix hidden search controls and search result sections

--- a/src/components/resource-selector/shared/resource-preview.less
+++ b/src/components/resource-selector/shared/resource-preview.less
@@ -3,9 +3,9 @@
   max-width: 360px;
   height: 280px;
   overflow: hidden;
-  background-color: @edu-white;
   display: flex;
   justify-content: center;
+  background-color: transparent;
 
   &.ResourcePreview--pdf {
     height: 330px;
