EDU-1127 Simplify screens styling and fix hidden search controls and search result sections

--- a/src/components/resource-selector/wikimedia/wikimedia-search-screen.less
+++ b/src/components/resource-selector/wikimedia/wikimedia-search-screen.less
@@ -12,6 +12,7 @@
 .WikimediaSearchScreen-noSearch {
   display: grid;
   padding: 20px;
+  overflow: auto;
 }
 
 .WikimediaSearchScreen-filesViewer {
@@ -41,9 +42,4 @@
 .WikimediaSearchScreen-buttonsLineItem {
   white-space: nowrap;
   margin: @edu-control-spacing-base @edu-control-spacing-wide 0 @edu-control-spacing-wide;
-}
-
-.WikimediaSearchScreen-searchInfo {
-  min-height: 40px;
-  margin-bottom: 20px;
 }
