--- a/src/components/resource-selector/media-library/media-library-search-screen.less
+++ b/src/components/resource-selector/media-library/media-library-search-screen.less
@@ -31,11 +31,8 @@
   background-color: fade(@edu-background-color-light, 60%);
 }
 
-.MediaLibrarySearchScreen-searchInfo {
-  min-height: 40px;
-  margin-bottom: 20px;
-}
-
 .MediaLibrarySearchScreen-noSearch {
   display: grid;
+  height: 100%;
+  overflow: auto;
 }
