EDU-1127 Simplify and unify drag-and-drop effects, fix overflow issues

--- a/src/components/resource-selector/document-or-room-media/document-or-room-media-default-screen.less
+++ b/src/components/resource-selector/document-or-room-media/document-or-room-media-default-screen.less
@@ -15,6 +15,16 @@
   & .ant-table-placeholder .ant-table-cell {
     border: none;
   }
+
+  &.is-dropping {
+    .m-dropzone;
+    .m-dropzone-active;
+  }
+
+  &.is-drop-rejected {
+    .m-dropzone;
+    .m-dropzone-error;
+  }
 }
 
 .DocumentOrRoomMediaDefaultScreen-filesViewerContent {
