--- a/src/components/resource-selector/wikimedia/wikimedia-search-screen.less
+++ b/src/components/resource-selector/wikimedia/wikimedia-search-screen.less
@@ -11,12 +11,13 @@
 
 .WikimediaSearchScreen-noSearch {
   display: grid;
-  padding: 20px;
+  align-items: center;
+  margin: @edu-content-padding;
   overflow: auto;
 }
 
 .WikimediaSearchScreen-filesViewer {
-  margin: 20px 0;
+  margin: @edu-content-padding 0;
   border: 1px solid @edu-border-color-base;
   overflow: hidden;
 }
