--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -245,25 +245,33 @@
   box-shadow: 0 0 0 @edu-outline-width fade(@edu-error-color, @edu-outline-fade);
 }
 
-.m-dropzone-transition {
-  transition:
-    background-color @edu-animation-duration-slow,
-    border-color @edu-animation-duration-slow,
-    box-shadow @edu-animation-duration-slow;
-}
 
-.m-dropzone-base {
-  .m-dropzone-transition;
-  background-color: @edu-background-color-light;
-  border: 1px dashed @edu-border-color-active;
+.m-dropzone {
+  position: relative;
   border-radius: @edu-border-radius-base;
+  border: 1px dashed @edu-border-color-active;
+  background-color: @edu-background-color-light;
 }
 
 .m-dropzone-active {
-  .m-dropzone-transition;
-  background-color: @edu-background-color-base;
   border-style: solid;
+  border-radius: @edu-border-radius-base;
   .m-border-glow-success;
+
+  &::after {
+    content: '';
+    .m-mask;
+    opacity: 0.6;
+    position: absolute;
+    border-radius: @edu-border-radius-base;
+    background-color: @edu-background-color-light;
+  }
+}
+
+.m-dropzone-error {
+  border-style: solid;
+  border-radius: @edu-border-radius-base;
+  .m-border-glow-error;
 }
 
 .m-info-card {
