--- a/src/components/resource-selector/media-library/media-library-search-screen.less
+++ b/src/components/resource-selector/media-library/media-library-search-screen.less
@@ -16,6 +16,16 @@
   border: 1px solid @edu-border-color-base;
   overflow: hidden;
   position: relative;
+
+  &.is-dropping {
+    .m-dropzone;
+    .m-dropzone-active;
+  }
+
+  &.is-drop-rejected {
+    .m-dropzone;
+    .m-dropzone-error;
+  }
 }
 
 .MediaLibrarySearchScreen-filesViewerContent {
@@ -32,7 +42,26 @@
 }
 
 .MediaLibrarySearchScreen-noSearch {
+  .m-dropzone;
   display: grid;
   height: 100%;
   overflow: auto;
+
+  &.is-dropping {
+    .m-dropzone-active;
+  }
+
+  &.is-drop-rejected {
+    .m-dropzone-error;
+  }
+}
+
+.MediaLibrarySearchScreen-noSearchContent {
+  display: grid;
+  padding: @edu-content-padding;
+  align-content: space-around;
+}
+
+.MediaLibrarySearchScreen-noSearchDivider {
+  min-width: 80%;
 }
