--- a/src/components/redaction/redaction-documents-tab.less
+++ b/src/components/redaction/redaction-documents-tab.less
@@ -1,6 +1,6 @@
-.RedactionPage {}
+.RedactionDocumentsTab {}
 
-.RedactionPage-documentsControls {
+.RedactionDocumentsTab-controls {
   margin-bottom: 40px;
   display: grid;
   gap: 15px;
@@ -12,10 +12,10 @@
   }
 }
 
-.RedactionPage-documentsFilter {
+.RedactionDocumentsTab-filter {
   width: 100%;
 }
 
-.RedactionPage-documentBadges {
+.RedactionDocumentsTab-badges {
   .m-control-group;
 }
