EDU-1123 Render media-library metadata in preview screen

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -108,6 +108,7 @@
 @import '../components/localization/language-flag-and-name.less';
 @import '../components/media-player/multitrack-media-player.less';
 @import '../components/redaction/redaction-document-tags-tab.less';
+@import '../components/resource-selector/shared/resource-url.less';
 @import '../components/admin/user-account-locked-state-editor.less';
 @import '../components/media-player/media-player-progress-bar.less';
 @import '../components//media-player/timecode-fine-tunning-input.less';
@@ -118,6 +119,7 @@
 @import '../components/resource-selector/shared/files-list-viewer.less';
 @import '../components/resource-selector/shared/file-editor-screen.less';
 @import '../components/resource-selector/shared/resource-search-bar.less';
+@import '../components/resource-selector/shared/resource-preview-screen.less';
 @import '../components/resource-selector/shared/selected-resource-display.less';
 @import '../components/resource-selector/wikimedia/wikimedia-files-viewer.less';
 @import '../components/resource-selector/wikimedia/wikimedia-search-screen.less';
