--- a/src/components/resource-selector/shared/resource-url.less
+++ b/src/components/resource-selector/shared/resource-url.less
@@ -4,9 +4,9 @@
   align-items: baseline;
   place-content: center;
   grid-auto-flow: column;
-  font-size: @edu-font-size-xs;
+  font-size: @edu-font-size-sm;
   color: @edu-text-color-secondary;
-  margin-top: 35px;
+  margin-top: 30px;
 }
 
 .ResourceUrl-icon {
