--- a/src/components/resource-selector/wikimedia/wikimedia-search-screen.less
+++ b/src/components/resource-selector/wikimedia/wikimedia-search-screen.less
@@ -1,8 +1,7 @@
 .WikimediaSearchScreen {
+  position: relative;
   height: 100%;
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: auto 1fr auto auto;
+  width: 100%;
 
   &.is-hidden {
     visibility: hidden;
@@ -20,6 +19,7 @@
   margin: @edu-content-padding 0;
   border: 1px solid @edu-border-color-base;
   overflow: hidden;
+  height: 100%;
 }
 
 .WikimediaSearchScreen-filesViewerContent {
