--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -57,6 +57,7 @@
 @import '../components/default-site-logo.less';
 @import '../components/input-and-preview.less';
 @import '../components/registration-form.less';
+@import '../components/navigation-desktop.less';
 @import '../components/pages/user-profile.less';
 @import '../components/edit-control-panel.less';
 @import '../components/document-info-cell.less';
