EDU-1144 Add mobile navigation

--- a/src/components/navigation-desktop.less
+++ b/src/components/navigation-desktop.less
@@ -25,6 +25,7 @@
 .NavigationDesktop-authenticatedUserMenuOption {
   display: grid;
   gap: 10px;
+  margin: 2px 0;
   align-items: center;
   place-content: start;
   grid-auto-flow: column;
