EDU-1144 Include search-bar on menu navigation

--- a/src/components/navigation-mobile.less
+++ b/src/components/navigation-mobile.less
@@ -22,10 +22,16 @@
   justify-content: space-between;
 }
 
+.NavigationMobile-drawerContentSearch {
+  margin-bottom: 40px;
+}
+
 .NavigationMobile-drawerContentItems {
   display: grid;
   gap: 25px;
+  place-items: start;
   grid-auto-flow: row;
+  margin-bottom: 15px;
 
   .ant-collapse-header {
     padding: 0 !important;
